--- a/block-BHaaaf/style.css
+++ b/block-BHaaaf/style.css
@@ -1,4 +1,4 @@
-h1{color: black;}
-p{color: antiquewhite;}
+h1{color:crimson;}
+p{color: burlywood;}
 body{background-color: blue;}
 title{color: chocolate;}
