--- a/block-BHaaai/style.css
+++ b/block-BHaaai/style.css
@@ -1,4 +1,4 @@
 p{color: brown;}
-h6{color:burlywood ;font-family: Arial, Helvetica, sans-serif;}
+h6{color:burlywood ;font-size: small;}
 h1{color: darkcyan;}
 body{background-color: darksalmon;}
